--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "spring-racing-backend",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www",
-    "start_development": "set NODE_ENV=development&&node ./bin/www",
-    "start_production": "set NODE_ENV=production&&node ./bin/www"
-  },
-  "dependencies": {
-    "body-parser": "~1.18.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "ejs": "~2.5.7",
-    "express": "~4.15.5",
-    "mongoose": "^4.12.1",
-    "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
-  }
+    "name": "spring-racing-backend",
+    "version": "2.0.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www",
+        "start_development": "set NODE_ENV=development&&node ./bin/www",
+        "start_production": "set NODE_ENV=production&&node ./bin/www"
+    },
+    "dependencies": {
+        "body-parser": "^1.18.2",
+        "cookie-parser": "^1.4.3",
+        "debug": "^3.1.0",
+        "ejs": "^2.5.7",
+        "express": "^4.16.2",
+        "mongoose": "^5.0.1",
+        "morgan": "^1.9.0",
+        "serve-favicon": "^2.4.5"
+    }
 }
