--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
         "start_production": "set NODE_ENV=production&&node ./bin/www"
     },
     "dependencies": {
-        "body-parser": "^1.18.2",
-        "cookie-parser": "^1.4.3",
-        "debug": "^3.1.0",
-        "ejs": "^2.5.7",
-        "express": "^4.16.2",
-        "mongoose": "^5.0.1",
-        "morgan": "^1.9.0",
-        "serve-favicon": "^2.4.5"
+        "body-parser": "^1.19.0",
+        "cookie-parser": "^1.4.4",
+        "debug": "^4.1.1",
+        "ejs": "^2.6.2",
+        "express": "^4.17.1",
+        "mongoose": "^5.6.7",
+        "morgan": "^1.9.1"
     }
 }
