--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "body-parser": "^1.20.2",
         "cookie-parser": "^1.4.6",
         "debug": "^4.3.4",
+        "dotenv": "^16.0.3",
         "ejs": "^3.1.9",
         "express": "^4.18.2",
         "mongoose": "^5.13.17",
